remove index routes from swagger doc
